# python-simpleapp

./: README.md  pyproject.toml
examples/: runregchanges  runregchanges.py
src/argsupport/: __init__.py  argparse.py  pipeline.py  project.py
src/argsupport/__pyinstaller/: hook-argsupport.py
src/argsupport/examples/: nothing.py  uniraw.py
src/argsupport/gooey/: __init__.py  __main__.py
src/argsupport/gooey/gui/: bootstrap.py  cli.py  formatters.py  host.py  image_repository.py  imageutil.py  processor.py  seeder.py  state.py  validation.py
src/argsupport/gooey/gui/application/: application.py  components.py
src/argsupport/gooey/gui/components/: config.py  console.py  footer.py  header.py  menubar.py  modals.py  mouse.py  sidebar.py  tabbar.py
src/argsupport/gooey/gui/components/options/: options.py  validators.py
src/argsupport/gooey/gui/components/widgets/: bases.py  checkbox.py  choosers.py  command.py  counter.py  dropdown.py  dropdown_filterable.py  listbox.py  numeric_fields.py  password.py  radio_group.py  richtextconsole.py  slider.py  textarea.py  textfield.py
src/argsupport/gooey/gui/components/widgets/core/: chooser.py  text_input.py
src/argsupport/gooey/gui/components/widgets/dialogs/: base_dialog.py  calender_dialog.py  time_dialog.py
src/argsupport/gooey/gui/containers/: application.py
src/argsupport/gooey/gui/util/: freeze.py  time.py  wx_util.py
src/argsupport/gooey/python_bindings/: argparse_to_json.py  coms.py  config_generator.py  control.py  dynamics.py  gooey_decorator.py  gooey_parser.py  parameters.py  schema.py
src/argsupport/gooey/util/: functional.py
src/simpleapp/: __init__.py  argparse.py  changes.py  pipeline.py  project.py  toml.py
src/simpleapp/examples/: nothing.py  runregchanges.py  uniraw.py
tests/: test_changes.py  test_pipeline.py  testin.json  testin.usfm
