[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argsupport"
version = "0.1"
# (also manually bump version in src/feaxlib/__init__.py)
authors = [{name = "Martin Hosken", email = "fonts@sil.org"}]
readme = "README.md"
license = {file = "LICENSE.md"}
description = "Simple app development around Gooey and argparse"
classifiers = [
   "Environment :: Console",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Programming :: Python"
   ]
requires-python = ">=3.8"
#dynamic = ["version"]

dependencies = [
# gooey dependencies
"gooey == 1.0.8.1",
]

[project.optional-dependencies]
git = [
]

[project.urls]
Home-Page = "https://github.com/silnrsi/python-argsupport"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# version = {attr = "usfmtc.version"}

#[tool.setuptools]
#packages = ["usfmtc"]

[tool.bdist_wheel]
universal = true

[tool.setuptools.package-data]
argsupport = ["gooey/languages/*.json", "gooey/images/*.png", "gooey/images/program_icon.*"]

[project.scripts]
createargsupport = "argsupport.project:main"
runregchanges = "argsupport.examples.runregchanges:main"

[project.entry-points.pyinstaller40]
hook-dirs = "argsupport.__pyinstaller:get_hook_dirs"

